Document Regulator usage and languages
Document installation, public APIs, runtime acceleration, supported
languages, language semantics, and Trino integration boundaries.